--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,6 @@
     <packaging>jar</packaging>
     <version>1.0-SNAPSHOT</version>
 
-    <name>A Camel Scala Route</name>
     <url>http://www.myorganization.org</url>
 
     <properties>
@@ -193,7 +192,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>1.2.1</version>
                 <configuration>
-                    <mainClass>mnet.de.MyRouteMain</mainClass>
+                    <mainClass>gehversuch.TheSystem</mainClass>
                 </configuration>
             </plugin>
         </plugins>
